.yml fix attempt 3

--- a/.github/workflows/action-trigger.yml
+++ b/.github/workflows/action-trigger.yml
@@ -16,17 +16,21 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Notify webhook-repo
+        shell: pwsh
         run: |
-          curl.exe -X POST https://revolution-england-according-glen.trycloudflare.com/ `
-            -H "Content-Type: application/json" `
-            -d "{
-              \"repository\": \"${{ github.repository }}\",
-              \"ref\": \"${{ github.ref }}\",
-              \"event\": \"${{ github.event_name }}\",
-              \"actor\": \"${{ github.actor }}\",
-              \"pr_action\": \"${{ github.event.action || '' }}\",
-              \"pr_from\": \"${{ github.event.pull_request.head.ref || '' }}\",
-              \"pr_to\": \"${{ github.event.pull_request.base.ref || '' }}\",
-              \"merged_at\": \"${{ github.event.pull_request.merged_at || '' }}\",
-              \"author_name\": \"${{ github.event.pull_request.user.login || github.actor }}\"
-            }"
+          $payload = @{
+              repository = "${{ github.repository }}"
+              ref        = "${{ github.ref }}"
+              event      = "${{ github.event_name }}"
+              actor      = "${{ github.actor }}"
+              pr_action  = "${{ github.event.action }}"
+              pr_from    = "${{ github.event.pull_request.head.ref }}"
+              pr_to      = "${{ github.event.pull_request.base.ref }}"
+              merged_at  = "${{ github.event.pull_request.merged_at }}"
+              author_name= "${{ github.event.pull_request.user.login }}" 
+          } | ConvertTo-Json -Compress
+
+          Invoke-RestMethod -Uri "https://revolution-england-according-glen.trycloudflare.com/webhook/receiver" `
+                            -Method POST `
+                            -ContentType "application/json" `
+                            -Body $payload
